# amnet-aime-reader

./: README.md  aicc.py  main.py  pyproject.toml
