[project]
name = "amnet-aime-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "construct==2.10.70",
    "construct-typing>=0.6.2",
    "cryptography>=44.0.2",
    "pycryptodome>=3.22.0",
    "pyserial>=3.5",
    "starlette>=0.46.2",
    "structlog>=25.3.0",
    "uvicorn>=0.34.2",
]

[tool.basedpyright]
exclude = [".venv"]
disableBytesTypePromotions = false
reportAny = false
reportExplicitAny = false

[tool.uv.sources]
construct-typing = { git = "https://github.com/timrid/construct-typing" }
